# silk

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  handler.h  main.cpp  parse_file.h
include/silk/: error.h  version.hpp
include/silk/parser/: file.h  parse_file.h  parser.h  types.h  utils.h
src/: CMakeLists.txt  version.cpp
src/parser/: CMakeLists.txt  file.cpp  parser.cpp  utils.cpp
src/slk/: CMakeLists.txt
src/slk/core/: CMakeLists.txt  error.h  types.h
src/slk/io/: CMakeLists.txt  file.cpp  file.h
src/slk/parser/: CMakeLists.txt  parse_file.h  parser.cpp  parser.h
tests/: CMakeLists.txt  file_test.cpp  order_printers.cpp  order_printers.h  parser_test.cpp  utils.cpp  utils.h  version_test.cpp
tools/: fetch_sample_data.sh  truncate_itch  truncate_itch.cpp
